# Capstone-1

./: 141.ipynb  README.md  main.py  pyproject.toml
Source/credentials/: credentials.ini
Source/data/output/: best_movie_by_year_2nf.csv  best_movies_2nf.csv  best_show_by_year_2nf.csv  best_shows_2nf.csv  new_raw_titles_2nf.csv  raw_titles_2NF.csv
Source/data_cleaning/: data_cleaning.ipynb
Source/db_config/: __init__.py  config.py
Source/db_functions/: __init__.py  db_functions.py
Source/logger/: app_logger.py
misc/: SET_USERS_AND_PRIVILEGES.sql  SQL.sql  TABLE_UPDATE_WITH_ID_FROM_ANOTHER_TABLE.sql  new_movies_ERD.pgerd  table_info.txt  to_populate_tables.txt
