[tool.poetry]
name = "de-capstone-1"
version = "0.1.0"
description = "DE Capstone project 1"
authors = ["repeckadonatas <repeckadonatas@yahoo.comm>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
pandas = "^2.1.3"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
